feat(upgrade): upgrade to handle node16, and have linting built in

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,8 +20,8 @@
   "[ts]": {
     "editor.codeActionsOnSave": "source.fixAll.eslint"
   },
-  "javascript.format.semicolons": "remove",
-  "typescript.format.semicolons": "remove",
+  "javascript.format.semicolons": "ignore",
+  "typescript.format.semicolons": "ignore",
   "typescriptHero.imports.insertSemicolons": false,
   "typescript.preferences.quoteStyle": "single",
   "javascript.preferences.quoteStyle": "single",
