--- a/.editorconfig
+++ b/.editorconfig
@@ -1,10 +1,78 @@
+# Editor configuration, see https://editorconfig.org
 root = true
 
 [*]
 charset = utf-8
 indent_style = space
 indent_size = 2
-end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
+end_of_line = lf
+
+[{*.ts,*.js}]
 quote_type = single
+indent_style = space
+indent_size = 2
+
+[{Dockerfile,Makefile,*.go,script/add-grammar}]
+indent_style = tab
+indent_size = 4
+
+# md (GitHub shows code fences with 8 spaces)
+[*.md]
+indent_size = 2
+trim_trailing_whitespace = false
+x-soft-wrap-text = true
+max_line_length = off
+
+# Ignore fixtures and vendored files
+[{grammars,test/fixtures,samples,vendor,dist,build,node_modules,target}/**]
+charset = unset
+end_of_line = unset
+indent_size = unset
+indent_style = unset
+insert_final_newline = unset
+trim_trailing_spaces = unset
+
+
+[{**/dist/**,**/build/**,**/node_modules/**,**/vendor/**,**/target/**}]
+indent_style = ignore
+indent_size = ignore
+insert_final_newline = ignore
+trim_trailing_whitespace = ignore
+
+# Makefiles always use tabs for indentation
+[**/Makefile*]
+indent_style = tab
+indent_size = 4
+
+# Minified JavaScript files shouldn't be changed
+[**.min.js]
+indent_style = ignore
+insert_final_newline = ignore
+
+# Batch files use tabs for indentation
+[*.bat]
+indent_style = tab
+
+[docs/**.txt]
+max_line_length = 79
+
+# Docstrings and comments use max_line_length = 79
+[*.py]
+max_line_length = 88
+
+# Use 2 spaces for the HTML files
+[*.html]
+indent_size = 2
+
+# The JSON files contain newlines inconsistently
+[*.json]
+indent_size = 2
+insert_final_newline = ignore
+
+# The indent size used in the `package.json` file cannot be changed
+# https://github.com/npm/npm/pull/3180#issuecomment-16336516
+[{*.yml,*.yaml,package.json}]
+indent_style = space
+indent_size = 2
