--- a/.github/workflows/create_tag.yml
+++ b/.github/workflows/create_tag.yml
@@ -10,39 +10,32 @@ jobs:
   tag:
     runs-on: Ubuntu-20.04
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         name: Checkout
         with:
           fetch-depth: 0
       - name: Set Git User Details
         run: |
-          git config user.name "${GITHUB_USER:-github-actions}"
+          git config user.name "${GITHUB_ACTOR:-github-actions}"
           git config user.email "${GITHUB_EMAIL:-github-actions@github.com}"
-      - uses: actions/setup-node@v2.1.5
+      - uses: actions/setup-node@v3
         with:
-          node-version: 12.x
-      - name: Get yarn cache directory path
-        id: yarn-cache-dir-path
-        run: echo "::set-output name=dir::$(yarn cache dir)"
-      - uses: actions/cache@v2.1.5
-        id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
-        with:
-          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-yarn-
+          node-version: 16.x
+          cache: yarn
+
       - name: Bump version and push tag
         id: tag_version
-        uses: mathieudutour/github-tag-action@v5.5
+        uses: mathieudutour/github-tag-action@v6
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           tag_prefix: 'v'
           dry_run: 'true'
       - name: Install project dependencies
-        run: yarn --prefer-offline
+        run: yarn install
       - run: yarn run build
-      - run: yarn run build
-      - run: git add dist
+      - run: |
+          git add dist
+          git commit -m 'Refresh Build in `dist` folder'
       - run: |
           yarn config set version-tag-prefix "v"
           yarn config set version-commit-hooks true
@@ -60,11 +53,11 @@ jobs:
           set -x
           yarn version --patch --message "${CHANGELOG}"
 
-      - name: Create a GitHub release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{steps.version.outputs.tag}}
-          release_name: Release ${{steps.version.outputs.tag}}
-          body: ${{ steps.tag_version.outputs.changelog }}
+      # - name: Create a GitHub release
+      #   uses: actions/create-release@v1
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #   with:
+      #     tag_name: ${{steps.version.outputs.tag}}
+      #     release_name: Release ${{steps.version.outputs.tag}}
+      #     body: ${{ steps.tag_version.outputs.changelog }}
