--- a/package.json
+++ b/package.json
@@ -12,13 +12,7 @@
   "bugs": {
     "url": "https://github.com/bitflight-devops/github-action-jira-issues-fixversion-manager/issues"
   },
-  "keywords": [
-    "actions",
-    "github",
-    "node12",
-    "jira",
-    "tickets"
-  ],
+  "keywords": ["actions", "github", "node12", "jira", "tickets"],
   "author": "Jamie Nelson <jamie@bitflight.io>",
   "license": "MIT",
   "private": true,
@@ -27,16 +21,15 @@
     "test-ci": "NODE_ENV=testing jest --ci --reporters=default --reporters=jest-junit",
     "clean": "rimraf dist",
     "build": "yarn run clean;tsc;ncc build lib/index.js -o dist --source-map --license licenses.txt",
-    "format": "prettier --list-different \"./{**/,}*.{ts,js,json,md,yml}\"",
-    "format:fix": "prettier --write \"./{**/,}*.{ts,js,json,md,yml}\"",
-    "lint": "eslint . --ext .js,.ts",
-    "lint:fix": "yon run format:fix;eslint . --ext .js,.ts --fix",
+    "format": "prettier --write . --config .prettierrc.cjs --ignore-unknown",
+    "lint": "eslint -c .eslintrc.cjs --color ./src/ ./__tests__/",
+    "prelint": "yarn run format && tsc --project tsconfig.json --noemit",
+    "lint:fix": "yarn lint --fix",
     "lint:markdown": "markdownlint \"**/*.md\" --config=.markdownlint.json --ignore-path=.markdownlintignore",
     "lint:markdown:fix": "yarn lint:markdown --fix",
     "all": "yon run build && yon run format && yon run lint && yon run package && yon test",
     "commit": "git-cz",
-    "pre-add": "yarn format:fix",
-    "pre-commit": "yarn run lint:fix && yon run build && git add dist && yarn run generate-docs",
+    "pre-commit": "yarn run lint:fix && lint-staged && yon run build && git add dist && yarn run generate-docs",
     "pre-push": "yarn format",
     "preversion": "echo 'Running test';yon test",
     "version": "echo 'Run versioning commands';yon generate-docs;echo \"::set-output name=tag::v${npm_package_version}\"",
@@ -50,29 +43,17 @@
     }
   },
   "commitlint": {
-    "extends": [
-      "@commitlint/config-conventional"
-    ],
+    "extends": ["@commitlint/config-conventional"],
     "rules": {
-      "body-max-length": [
-        0
-      ],
-      "body-max-line-length": [
-        0
-      ],
-      "footer-max-length": [
-        0
-      ],
-      "footer-max-line-length": [
-        0
-      ],
-      "header-max-length": [
-        0
-      ]
+      "body-max-length": [0],
+      "body-max-line-length": [0],
+      "footer-max-length": [0],
+      "footer-max-line-length": [0],
+      "header-max-length": [0]
     }
   },
   "engines": {
-    "node": "^10.12.0 || >=12.0.0"
+    "node": ">=16.10.0"
   },
   "exports": {
     ".": {
@@ -81,90 +62,94 @@
     },
     "./package.json": "./package.json"
   },
-  "files": [
-    "src",
-    "dist"
-  ],
+  "files": ["src", "dist"],
   "dependencies": {
-    "@actions/core": "^1.4.0",
-    "@actions/github": "^5.0.0",
-    "@octokit/graphql": "^4.6.2",
-    "@octokit/rest": "^18.5.3",
-    "ansi-colors": "^4.1.1",
-    "graphql": "^15.5.0",
-    "jira.js": "^2.2.1",
-    "tslib": "^2.2.0",
-    "yaml": "^1.10.2"
+    "@actions/core": "^1.10.0",
+    "@actions/github": "^5.1.1",
+    "@octokit/graphql": "^5.0.4",
+    "@octokit/rest": "^19.0.5",
+    "ansi-colors": "^4.1.3",
+    "axios": "^1.1.3",
+    "graphql": "^15",
+    "jira.js": "^2.15.14",
+    "tslib": "^2.4.0",
+    "yaml": "^2.1.3"
   },
   "devDependencies": {
-    "@commitlint/cli": "^12.1.3",
-    "@commitlint/config-conventional": "^12.1.3",
-    "@commitlint/prompt": "^12.1.3",
-    "@github/prettier-config": "^0.0.4",
-    "@octokit/graphql-schema": "^10.46.0",
-    "@tsconfig/node12": "^1.0.8",
-    "@types/jest": "^26.0.23",
-    "@types/js-yaml": "^4.0.1",
-    "@types/lodash": "^4.14.170",
-    "@types/node": "^15.12.2",
-    "@types/node-fetch": "^2.5.10",
-    "@typescript-eslint/eslint-plugin": "^4.26.1",
-    "@typescript-eslint/parser": "^4.26.1",
-    "@typescript-eslint/typescript-estree": "^4.26.1",
-    "@vercel/ncc": "^0.28.5",
-    "commitizen": "^4.2.4",
+    "@babel/core": "^7.19.6",
+    "@babel/eslint-parser": "^7.19.1",
+    "@commitlint/cli": "^17.1.2",
+    "@commitlint/config-conventional": "^17.1.0",
+    "@commitlint/prompt": "^17.1.2",
+    "@octokit/graphql-schema": "^12.21.0",
+    "@swc/core": "^1.3.11",
+    "@tsconfig/node12": "^1.0.11",
+    "@tsconfig/node16": "^1.0.3",
+    "@types/jest": "^29.2.0",
+    "@types/js-yaml": "^4.0.5",
+    "@types/lodash": "^4.14.186",
+    "@types/node": "^18.11.7",
+    "@types/node-fetch": "^2.6.2",
+    "@typescript-eslint/eslint-plugin": "^5.41.0",
+    "@typescript-eslint/parser": "^5.41.0",
+    "@typescript-eslint/typescript-estree": "^5.41.0",
+    "@vercel/ncc": "^0.34.0",
+    "commitizen": "^4.2.5",
     "cz-conventional-changelog": "^3.3.0",
-    "dotenv": "^10.0.0",
-    "eslint": "^7.28.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-github": "^4.1.3",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jest": "^24.3.6",
-    "eslint-plugin-prettier": "^3.4.0",
-    "eslint-plugin-security": "^1.4.0",
-    "eslint-plugin-simple-import-sort": "^7.0.0",
-    "github-action-readme-generator": "1.0.12",
-    "husky": "^6.0.0",
-    "jest": "^27.0.4",
-    "jest-circus": "^27.0.4",
-    "jest-junit": "^12.0.0",
+    "dotenv": "^16.0.3",
+    "eslint": "^8.26.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-formatter-codeframe": "^7.32.1",
+    "eslint-import-resolver-typescript": "^3.5.2",
+    "eslint-plugin-actions": "^2.0.0",
+    "eslint-plugin-array-func": "^3.1.7",
+    "eslint-plugin-editorconfig": "^4.0.2",
+    "eslint-plugin-eslint-comments": "^3.2.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jest": "^27.1.3",
+    "eslint-plugin-jest-async": "^1.0.3",
+    "eslint-plugin-json-schema-validator": "^4.0.2",
+    "eslint-plugin-lodash": "^7.4.0",
+    "eslint-plugin-lodash-fp": "^2.2.0-a1",
+    "eslint-plugin-no-use-extend-native": "^0.5.0",
+    "eslint-plugin-optimize-regex": "^1.2.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-simple-import-sort": "^8.0.0",
+    "eslint-plugin-sonarjs": "^0.16.0",
+    "eslint-plugin-sort-class-members": "^1.15.2",
+    "eslint-plugin-switch-case": "^1.1.2",
+    "eslint-plugin-unicorn": "^44.0.2",
+    "github-action-readme-generator": "1.2.7",
+    "husky": "^8.0.1",
+    "jest": "^29.2.2",
+    "jest-circus": "^29.2.2",
+    "jest-junit": "^14.0.1",
     "js-yaml": "^4.1.0",
-    "lint-staged": "^11.0.0",
-    "markdownlint-cli": "^0.27.1",
-    "prettier": "^2.3.1",
+    "jsonc-eslint-parser": "^2.1.0",
+    "lint-staged": "^13.0.3",
+    "markdownlint-cli": "^0.32.2",
+    "prettier": "^2.7.1",
     "rimraf": "^3.0.2",
-    "semantic-release": "^17.4.3",
-    "ts-jest": "^27.0.3",
-    "ts-node": "^10.0.0",
-    "typescript": "^4.2.4",
-    "typescript-eslint-language-service": "^4.1.4",
+    "semantic-release": "^19.0.5",
+    "ts-jest": "^29.0.3",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.4",
+    "typescript-eslint-language-service": "^5.0.0",
+    "yaml-eslint-parser": "^1.1.0",
     "yarn-or-npm": "^3.0.1"
-  },
-  "jest": {
-    "testPathIgnorePatterns": [
-      "/helpers/",
-      "/node_modules/"
-    ],
-    "coveragePathIgnorePatterns": [
-      "/node_modules/"
-    ]
   },
   "jest-junit": {
     "suiteNameTemplate": "{filepath}",
     "classNameTemplate": "{classname}",
     "titleTemplate": "{title}"
   },
-  "prettier": "@github/prettier-config",
-  "peerDependencies": {
-    "eslint": "^7.25.0"
-  },
   "lint-staged": {
     "{src,__tests__}/**/*.js": "eslint --cache --fix",
-    "*.ts": [
-      "eslint --cache --fix"
-    ]
+    "*.ts": ["eslint --cache --fix"]
   },
-  "resolutions": {
-    "typescript": "4.2.4"
+  "optionalDependencies": {
+    "@swc/core-darwin-x64": "^1.3.11"
   }
 }
